--- a/Sample.html
+++ b/Sample.html
@@ -4,10 +4,10 @@
   <title>Git Conflict Demo</title>
   <style>
     body {
-      background-color: lightblue;
+      background-color: rgb(173, 230, 195);
     }
     h1 {
-      color: green;
+      color: rgb(128, 47, 0);
     }
   </style>
 </head>
