--- a/Sample.html
+++ b/Sample.html
@@ -4,10 +4,11 @@
   <title>Git Conflict Demo</title>
   <style>
     body {
-      background-color: rgb(173, 230, 195);
+      background-color: lightblue;
+      font-family: Arial, sans-serif; /* Added font style */
     }
     h1 {
-      color: rgb(128, 47, 0);
+      color: green;
     }
   </style>
 </head>
