--- a/Sample.html
+++ b/Sample.html
@@ -5,6 +5,7 @@
   <style>
     body {
       background-color: lightblue;
+      font-family: Arial, sans-serif; /* Added font style */
     }
     h1 {
       color: green;
@@ -13,6 +14,6 @@
 </head>
 <body>
   <h1>Hello World</h1>
-  <h2>Hello World</h2>
+  <h1>Hello World</h1>
 </body>
 </html>
